FAQ to footer spacing issue

--- a/src/components/faq.module.css
+++ b/src/components/faq.module.css
@@ -1,5 +1,6 @@
 .faqSection {
     display: grid;
+    grid-gap: 10%;
     height: 85vh;
     width: 100%;
     padding-top: 1em;
